--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -7,6 +7,14 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/iv_avatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="16dp"
+        tools:src="@color/purple_700"
+        android:contentDescription="@string/user_s_avatar" />
+
     <TextView
         android:id="@+id/tv_login"
         android:layout_width="wrap_content"
