--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="medium">20sp</dimen>
     <dimen name="small">16sp</dimen>
+    <dimen name="large">24sp</dimen>
 </resources>
